--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
+
     <string name="app_name">GeoQuiz</string>
+    <string name="geoquiz_welcome">Welcome to GeoQuiz!</string>
+    <string name="true_button">TRUE</string>
+    <string name="false_button">FALSE</string>
+
 </resources>
